--- a/Hoof/Views/Report/MonthlyReport.cshtml
+++ b/Hoof/Views/Report/MonthlyReport.cshtml
@@ -13,7 +13,7 @@
 
 <br />
 
-<table class="table-bordered" style="text-align: center" id="monthlyReportTable">
+<table class="table-bordered table-hover" style="text-align: center" id="monthlyReportTable">
     <tr>
         <th colspan="2" style="padding: 10px">Gatunek zwierzyny</th>
         <th style="padding: 10px">Odstrzelono</th>
