--- a/Hoof/Views/Hunt/MyHunts.cshtml
+++ b/Hoof/Views/Hunt/MyHunts.cshtml
@@ -10,11 +10,10 @@
     Dodaj polowanie
 </button>
 
-<table class="table">
+<br/>
+
+<table class="table table-bordered table-hover">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Date)
-        </th>
         <th>
             @Html.DisplayNameFor(model => model.City)
         </th>
@@ -36,15 +35,17 @@
         <th>
             @Html.DisplayNameFor(model => model.Shots)
         </th>
-        <th></th>
+        <th>
+            @Html.DisplayNameFor(model => model.Date)
+        </th>
+        <th>
+            Zarządzaj
+        </th>
     </tr>
 
     @foreach (var item in Model)
     {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Date)
-            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.City)
             </td>
@@ -65,6 +66,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Shots)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Date)
             </td>
             <td>
                 @Html.ActionLink("Edytuj", "Edit", new { /* id=item.PrimaryKey */ }) |
