--- a/Hoof/Views/Home/Index.cshtml
+++ b/Hoof/Views/Home/Index.cshtml
@@ -2,30 +2,20 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<br/>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+<div class="container" style="margin-top: 100px">
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <a href="@Url.Action("Index", "AnnualPlan")" class="btn btn-primary btn-lg" role="button" style="width:150px; height: 120px; margin-bottom:75px; margin-right:75px;"><span class="glyphicon glyphicon-list-alt" style="margin-top: 25px;"></span> <br />Roczny plan</a>
+            <a href="@Url.Action("Index", "Report")" class="btn btn-success btn-lg" role="button" style="width:150px; height: 120px; margin-bottom:75px; margin-right:75px;"><span class="glyphicon glyphicon-bookmark" style="margin-top: 25px;"></span> <br />Meldunek</a>
+            <a href="@Url.Action("Index", "Hunt")" class="btn btn-primary btn-lg" role="button" style="width:150px; height: 120px; margin-bottom:75px; margin-right:75px;"><span class="glyphicon glyphicon-signal" style="margin-top: 25px;"></span> <br />Polowania</a>
+            <a href="@Url.Action("Index", "Catch")" class="btn btn-success btn-lg" role="button" style="width:150px; height: 120px; margin-bottom:75px; margin-right:75px;"><span class="glyphicon glyphicon-comment" style="margin-top: 25px;"></span> <br />Odłowy</a>
+            <a href="@Url.Action("Index", "Loss")" class="btn btn-primary btn-lg" role="button" style="width:150px; height: 120px; margin-bottom:75px; margin-right:75px;"><span class="glyphicon glyphicon-user" style="margin-top: 25px;"></span> <br />Ubytki</a>
+            <a href="@Url.Action("Index", "Home")" class="btn btn-success btn-lg" role="button" style="width:150px; height: 120px; margin-bottom:75px; margin-right:75px;"><span class="glyphicon glyphicon-file" style="margin-top: 25px;"></span> <br />Wykaz</a>
+            <a href="@Url.Action("Index", "Home")" class="btn btn-primary btn-lg" role="button" style="width:150px; height: 120px; margin-bottom:75px; margin-right:75px;"><span class="glyphicon glyphicon-picture" style="margin-top: 25px;"></span> <br />Wycena</a>
+            <a href="@Url.Action("Index", "Home")" class="btn btn-success btn-lg" role="button" style="width:150px; height: 120px; margin-bottom:75px; margin-right:75px;"><span class="glyphicon glyphicon-tag" style="margin-top: 25px;"></span> <br />Gospodarka</a>
+            <a href="@Url.Action("Index", "Home")" class="btn btn-primary btn-lg" role="button" style="width:150px; height: 120px; margin-bottom:75px; margin-right:75px;"><span class="glyphicon glyphicon-apple" style="margin-top: 25px;"></span> <br />Inne</a>
+        </div>
     </div>
 </div>
