--- a/Hoof/Views/Report/Index.cshtml
+++ b/Hoof/Views/Report/Index.cshtml
@@ -10,7 +10,7 @@
 
         $('#showReport').on('click', function () {
             var dateTo = $('#dateTo').val();
-            window.location.href = "Report/MonthlyReport?dateFrom=04/01/2018" + "&dateTo=" + dateTo;
+            window.location.href = "Report/MonthlyReport?dateFrom=04/01/2018&dateTo=" + dateTo;
         });
     </script>
 }
@@ -20,7 +20,7 @@
 
 <div style="text-align: center">
     <p>Pobierz meldunek za okres od 01/04/@(DateTime.Today.Year - 1) do 
-        <input id="dateTo" value="@DateTime.Today.ToString("dd/MM/yyyy")"> 
+        <input id="dateTo" value="@DateTime.Today.ToString("MM/dd/yyyy")"> 
         <button class="btn btn-default" id="showReport">Pokaż</button>
     </p>
 </div>
