--- a/Hoof/Views/AnnualPlan/Plan.cshtml
+++ b/Hoof/Views/AnnualPlan/Plan.cshtml
@@ -44,7 +44,15 @@
 
         $(document).ready(function() {
             var config = {};
-            config.marketingYearId = 3;
+            config.CurrentMarketingYearModel = {
+                Id: @Model.CurrentMarketingYearModel.Id,
+                MarketingYear: '@Model.CurrentMarketingYearModel.ToString()',
+                StartYear: @Model.CurrentMarketingYearModel.Start.Year
+            };
+            config.PreviousMarketingYearModel = {
+                Id: @Model.PreviousMarketingYearModel.Id,
+                MarketingYear: '@Model.PreviousMarketingYearModel.ToString()'
+            };
             var annualPlanGenerator = new AnnualPlanGenerator(config);
         });
 
@@ -59,17 +67,17 @@
 <br />
 
 <h3 style="font-weight: bold">I. Dane ogólne</h3>
-<h4>1. Obwód łowiecki nr ........ powierzchnia ......... ha, w tym powierzchnia gruntów leśnych .......... ha powierzchnia po wyłączeniach, o których mowa w art. 26 ustawy z 13.X.1995r. Prawo Łowieckie ......... ha</h4>
-<h4>2. Wojewódzctwo .........................................................................., Powiat................................................................................................................</h4>
-<h4>3. Nadleśnictwo (nazwa i adres siedziby) .........................................................................................................................................................................</h4>
-<h4>4. Regionalna Dyrekcja Lasów Państwowych (nazwa i adres siedziby) ................................................................................................................................................</h4>
-<h4>5. Zarząd Okręgowy PZŁ (nazwa i adres siedziby) ..................................................................................................................................................................</h4>
-<h4>6. Dzierżawca/lub zarządca (nazwa i adres siedziby) ..............................................................................................................................................................</h4>
+<h4>1. Obwód łowiecki nr <span style="font-weight: bold">20</span> powierzchnia <span style="font-weight: bold">4777</span> ha, w tym powierzchnia gruntów leśnych <span style="font-weight: bold">4394</span> ha powierzchnia po wyłączeniach, o których mowa w art. 26 ustawy z 13.X.1995r. Prawo Łowieckie <span style="font-weight: bold">4502</span> ha</h4>
+<h4>2. Wojewódzctwo <span style="font-weight: bold">wielkopolskie</span>, Powiat <span style="font-weight: bold">złotowski</span></h4>
+<h4>3. Nadleśnictwo (nazwa i adres siedziby) <span style="font-weight: bold">Płytnica z siedzibą w Nowej Szwecji, Szwecja 6 78-600 Wałcz</span></h4>
+<h4>4. Regionalna Dyrekcja Lasów Państwowych (nazwa i adres siedziby) <span style="font-weight: bold">Piła, 64-920 Piła-Kalina</span></h4>
+<h4>5. Zarząd Okręgowy PZŁ (nazwa i adres siedziby) <span style="font-weight: bold">Piła, al.Powstańców Wlkp. 190 64-920 Piła</span></h4>
+<h4>6. Dzierżawca/lub zarządca (nazwa i adres siedziby) <span style="font-weight: bold">Koło Łowieckie nr 39 Literatów Polskich „Pióro” ul.Rostworowskego 6/2, 01-496 Warszawa</span></h4>
 
 <br />
 
 <h3 style="font-weight: bold">II. Zagospodarowanie obwodu łowieckiego, szkody łowieckie</h3>
-<table class="table-bordered annualPlanTable" id="annualPlanTable">
+<table class="table-bordered table-hover annualPlanTable" id="annualPlanTable">
     <tr>
         <th>@Text.Specification</th>
         <th class="unit">@Text.Unit</th>
@@ -275,7 +283,7 @@
 
 <h3 style="font-weight: bold">IV. Dane dotyczące zwierząt łownych.</h3>
 <h4 style="font-weight: bold">a) zwierzyna gruba</h4>
-<table class="table-bordered annualPlanTable" style="text-align: center" id="bigGameTable">
+<table class="table-bordered table-hover annualPlanTable" style="text-align: center" id="bigGameTable">
     <tr>
         <th class="short-header" rowspan="4">@Text.GameTypes</th>
         <th colspan="2">@String.Format(Text.PreviousYearGainPlan, DateTime.Now.Year - 1, DateTime.Now.Year)</th>
@@ -413,7 +421,7 @@
 <br />
 
 <h4 style="font-weight: bold">b) zwierzyna drobna.</h4>
-<table class="table-bordered annualPlanTable" style="text-align: center" id="smallGameTable">
+<table class="table-bordered table-hover annualPlanTable" style="text-align: center" id="smallGameTable">
     <tr>
         <th class="medium-header" rowspan="3">@Text.GameTypes</th>
         <th colspan="2">@String.Format(Text.PreviousYearGainPlan, DateTime.Now.Year - 1, DateTime.Now.Year)</th>
