--- a/Hoof/Views/Shared/_Layout.cshtml
+++ b/Hoof/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
                         </a>
                         <ul class="dropdown-menu" role="menu">
                             <li>@Html.ActionLink("Pozyskanie zwierzyny", "Index", "GameHuntPlan")</li>
-                            <li>@Html.ActionLink("Urządzenia łowieckie", "Index", "AnnualPlan")</li>
+                            <li>@Html.ActionLink("Liczebność zwierzyny", "Index", "GameCountPlan")</li>
                             <li>@Html.ActionLink("Koszty", "Index", "AnnualPlan")</li>
                             <li>@Html.ActionLink("Karma", "Index", "AnnualPlan")</li>
                             <li>@Html.ActionLink("Obwód", "Index", "AnnualPlan")</li>
