Added maintaining Fodder Plan

--- a/Hoof/Views/Shared/_Layout.cshtml
+++ b/Hoof/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
                             <li>@Html.ActionLink("Pozyskanie zwierzyny", "Index", "GameHuntPlan")</li>
                             <li>@Html.ActionLink("Liczebność zwierzyny", "Index", "GameCountPlan")</li>
                             <li>@Html.ActionLink("Urządzenia łowieckie", "Index", "HuntEquipmentPlan")</li>
-                            <li>@Html.ActionLink("Karma", "Index", "AnnualPlan")</li>
+                            <li>@Html.ActionLink("Karma", "Index", "FodderPlan")</li>
                             <li>@Html.ActionLink("Obwód", "Index", "AnnualPlan")</li>
                         </ul>
                     </li>
