--- a/Hoof/Views/Shared/_Layout.cshtml
+++ b/Hoof/Views/Shared/_Layout.cshtml
@@ -65,6 +65,7 @@
                             <li>@Html.ActionLink("Liczebność zwierzyny", "Index", "GameCountPlan")</li>
                             <li>@Html.ActionLink("Urządzenia łowieckie", "Index", "HuntEquipmentPlan")</li>
                             <li>@Html.ActionLink("Karma", "Index", "FodderPlan")</li>
+                            <li>@Html.ActionLink("Zatrudnienie", "Index", "EmploymentPlan")</li>
                             <li>@Html.ActionLink("Koszty", "Index", "CostPlan")</li>
                         </ul>
                     </li>
