--- a/Hoof/Content/Site.css
+++ b/Hoof/Content/Site.css
@@ -22,3 +22,9 @@ select,
 textarea {
     max-width: 280px;
 }
+
+input.has-error,
+select.has-error {
+    background-color: #ffdcdc;
+    border-color: red
+}
