--- a/Hoof/Views/HuntEquipmentPlan/Plan.cshtml
+++ b/Hoof/Views/HuntEquipmentPlan/Plan.cshtml
@@ -4,6 +4,34 @@
     ViewBag.Title = "Plan";
 }
 
+@section Scripts{
+
+    @Scripts.Render("~/bundles/jqueryval")
+    <script type="text/javascript" src="~/Scripts/HuntEquipmentPlan/HuntEquipmentPlan.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            var config = {};
+            config.MarketingYearModel = {
+                Id: @Model.MarketingYearId
+            };
+            var huntEquipmentPlan = new HuntEquipmentPlan(config);
+        });
+    </script>
+
+}
+
+<div class="alert alert-danger" id="alert" role="alert" style="display: none">
+    <h4 class="alert-heading">
+        Uwaga !
+        <button type="button" class="close" id="closeAlert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </h4>
+    <p class="alert-body"></p>
+    <hr>
+    <p class="mb-0 alert-footer" style="font-size: 9pt">Jeżeli to coś poważniejszego, proszę skontaktować się z administratorem.</p>
+</div>
+
 <br />
 
 <h4 style="text-align: center">Plan zagospodarowania urządzeń łowieckich na rok gospodarczy @Model.MarketingYear</h4>
@@ -12,25 +40,46 @@
 
 <table class="table table-bordered table-hover">
     <tr>
-        <th>
+        <th style="width: 5%">
             Lp.
         </th>
-        <th>
-            Nazwa
+        <th style="width: 70%">
+            Urządzenie
         </th>
-        <th>
+        <th style="width: 15%">
             Sztuki
         </th>
-        <th>
+        <th style="width: 10%">
             Zarządzaj
         </th>
     </tr>
+    <tr>
+        <td>
 
+        </td>
+        <td>
+            @Html.DropDownList("Wybierz urządzenie", new List<SelectListItem>
+            {
+                new SelectListItem {Text = "Paśniki", Value = "1"},
+                new SelectListItem {Text = "Lizawki", Value = "2"},
+                new SelectListItem {Text = "Ambony", Value = "3"},
+                new SelectListItem {Text = "Woliery", Value = "4"},
+                new SelectListItem {Text = "Zagrody", Value = "5"},
+                new SelectListItem {Text = "Wodopoje", Value = "6"}
+            }, "", new { Name = String.Empty, @class = "form-control", id= "district", style="max-width: none"})
+        </td>
+        <td>
+            <input type="number" min="0" class="form-control" style="max-width: none"/>
+        </td>
+        <td>
+            <a href="#" id="addHuntEquipmentPlan">Dodaj</a>
+        </td>
+    </tr>
     @foreach (var item in Model.HuntEquipmentPlanViewModels)
     {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
+            <td style="text-align: center">
+                @Html.DisplayFor(modelItem => item.Type)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.TypeName)
