Maintaining Hunt Equipment Plan - Editing existing

--- a/Hoof/Content/Site.css
+++ b/Hoof/Content/Site.css
@@ -28,3 +28,14 @@ select.has-error {
     background-color: #ffdcdc;
     border-color: red
 }
+
+tr.editable,
+tr.editable:hover{
+    background-color: #e2f4e2 !important;
+}
+
+td.editable,
+td.editable:hover{
+    border: solid 2px green !important;
+    background-color: #e2f4e2 !important
+}
