--- a/Hoof/Views/HuntEquipmentPlan/Plan.cshtml
+++ b/Hoof/Views/HuntEquipmentPlan/Plan.cshtml
@@ -20,10 +20,10 @@
 
 }
 
-<div class="alert alert-danger" id="alert" role="alert" style="display: none">
+<div class="alert alert-danger" id="dangerAlert" role="alert" style="display: none">
     <h4 class="alert-heading">
         Uwaga !
-        <button type="button" class="close" id="closeAlert" aria-label="Close">
+        <button type="button" class="close" id="closeDangerAlert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </h4>
@@ -32,13 +32,23 @@
     <p class="mb-0 alert-footer" style="font-size: 9pt">Jeżeli to coś poważniejszego, proszę skontaktować się z administratorem.</p>
 </div>
 
+<div class="alert alert-warning" id="warningAlert" role="alert" style="display: none">
+    <h4 class="alert-heading">
+        Uwaga !
+        <button type="button" class="close" id="closeWarningAlert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </h4>
+    <p class="alert-body"></p>
+</div>
+
 <br />
 
 <h4 style="text-align: center">Plan zagospodarowania urządzeń łowieckich na rok gospodarczy @Model.MarketingYear</h4>
 
 <br />
 
-<table class="table table-bordered table-hover">
+<table class="table table-bordered table-hover" id="huntEquipmentPlanTable">
     <tr>
         <th style="width: 5%">
             Lp.
@@ -84,14 +94,18 @@
             <td>
                 @Html.DisplayFor(modelItem => item.TypeName)
             </td>
-            <td>
+            <td class="canEdit">
                 @Html.DisplayFor(modelItem => item.Count)
             </td>
             <td>
-                @Html.ActionLink("Edytuj", "Edit", new { id = item.Id }) |
+                <a href="#" class="editHuntEquipmentPlan">Edytuj</a> |
                 @Html.ActionLink("Usuń", "Delete", new { id = item.Id })
             </td>
         </tr>
     }
 
 </table>
+<div style="text-align: right">
+    <button class="btn btn-success" id="save" disabled>Zapisz</button>
+    <button class="btn btn-primary" id="cancel" disabled>Anuluj</button>
+</div>
