Added maintaining Cost Plan - add, edit, delete

--- a/Hoof/Views/CostPlan/Plan.cshtml
+++ b/Hoof/Views/CostPlan/Plan.cshtml
@@ -4,45 +4,114 @@
     ViewBag.Title = "Plan";
 }
 
+@section Scripts{
+
+    @Scripts.Render("~/bundles/jqueryval")
+    <script type="text/javascript" src="~/Scripts/CostPlan/CostPlan.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            var config = {
+                MarketingYearId: @Model.MarketingYearId,
+                Controller: "CostPlan"
+            };
+            var costPlan = new CostPlan(config);
+        });
+    </script>
+
+}
+
+<div class="alert alert-danger" id="dangerAlert" role="alert" style="display: none">
+    <h4 class="alert-heading">
+        Uwaga !
+        <button type="button" class="close" id="closeDangerAlert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </h4>
+    <p class="alert-body"></p>
+    <hr>
+    <p class="mb-0 alert-footer" style="font-size: 9pt">Jeżeli to coś poważniejszego, proszę skontaktować się z administratorem.</p>
+</div>
+
 <br />
 
-<h4 style="text-align: center">Plan kosztów gospodarki koła łowieckiego na rok gospodarczy @Model.MarketingYear</h4>
+<h4 style="text-align: center">Plan zagospodarowania kosztów koła łowieckiego na rok gospodarczy @Model.MarketingYear</h4>
 
 <br />
 
-<table class="table table-bordered table-hover">
+<table class="table table-bordered table-hover" id="planTable">
     <tr>
-        <th>
+        <th style="width: 5%">
             Lp.
         </th>
-        <th>
-            Nazwa
+        <th style="width: 75%">
+            Rodzaj kosztu
         </th>
-        <th>
-            Złotych
+        <th style="width: 10%">
+            Kwota w zł
         </th>
-        <th>
+        <th style="width: 10%">
             Zarządzaj
         </th>
     </tr>
-
-    @foreach (var item in Model.CostPlanViewModels)
+    <tr>
+        <td class="clearSearch">
+            <a href="#"> <span class="glyphicon glyphicon-ban-circle"></span> </a>
+        </td>
+        <td>
+            @Html.DropDownList("Wybierz rodzaj kosztu", new List<SelectListItem>
+            {
+                new SelectListItem {Text = "Koszt", Value = "1"},
+                new SelectListItem {Text = "Przychód", Value = "2"}
+            }, "", new { Name = String.Empty, @class = "form-control", id= "district", style="max-width: none"})
+        </td>
+        <td>
+            <input type="number" min="0" class="form-control" style="max-width: none" />
+        </td>
+        <td style="text-align: center">
+            <button class="btn btn-primary" id="addPlan">Dodaj</button>
+        </td>
+    </tr>
+    @foreach (var item in Model.CostPlanViewModels.OrderBy(x => x.Type).ToList())
     {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
+            <td style="text-align: center">
+                @Html.DisplayFor(modelItem => item.Type)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.TypeName)
             </td>
-            <td>
+            <td class="canEdit">
                 @Html.DisplayFor(modelItem => item.Cost)
             </td>
-            <td>
-                @Html.ActionLink("Edytuj", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Usuń", "Delete", new { id = item.Id })
+            <td style="text-align: center">
+                <button class="btn btn-xs btn-success editPlan">Edytuj</button>
+                <button class="btn btn-xs btn-danger deletePlan">Usuń</button>
             </td>
         </tr>
     }
 
 </table>
+<div style="text-align: right">
+    <button class="btn btn-secondary" id="cancel" disabled>Anuluj</button>
+    <button class="btn btn-success" id="save" disabled>Zapisz</button>
+</div>
+
+<div class="modal fade" id="confirmDeleteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Usuwanie planu kosztu</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" id="confirmDeleteModalBody">
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Anuluj</button>
+                <button type="button" class="btn btn-danger" id="confirmDelete">Usuń</button>
+            </div>
+        </div>
+    </div>
+</div>
