--- a/Hoof/Views/EmploymentPlan/Plan.cshtml
+++ b/Hoof/Views/EmploymentPlan/Plan.cshtml
@@ -55,7 +55,7 @@
     </tr>
     <tr>
         <td class="clearSearch">
-            <a href="#"> <span class="glyphicon glyphicon-remove-sign"></span> </a>
+            <a href="#"> <span class="glyphicon glyphicon-ban-circle"></span> </a>
         </td>
         <td>
             @Html.DropDownList("Wybierz rodzaj zatrudnienia", new List<SelectListItem>
