--- a/Hoof/Views/Shared/_Layout.cshtml
+++ b/Hoof/Views/Shared/_Layout.cshtml
@@ -61,12 +61,13 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu" role="menu">
+                            <li>@Html.ActionLink("Zatrudnienie", "Index", "EmploymentPlan")</li>
+                            <li>@Html.ActionLink("Urządzenia łowieckie", "Index", "HuntEquipmentPlan")</li>
+                            <li>@Html.ActionLink("Powierzchnia żeru", "Index", "TrunkFoodPlan")</li>
+                            <li>@Html.ActionLink("Karma", "Index", "FodderPlan")</li>
+                            <li>@Html.ActionLink("Koszty", "Index", "CostPlan")</li>
                             <li>@Html.ActionLink("Pozyskanie zwierzyny", "Index", "GameHuntPlan")</li>
                             <li>@Html.ActionLink("Liczebność zwierzyny", "Index", "GameCountPlan")</li>
-                            <li>@Html.ActionLink("Urządzenia łowieckie", "Index", "HuntEquipmentPlan")</li>
-                            <li>@Html.ActionLink("Karma", "Index", "FodderPlan")</li>
-                            <li>@Html.ActionLink("Zatrudnienie", "Index", "EmploymentPlan")</li>
-                            <li>@Html.ActionLink("Koszty", "Index", "CostPlan")</li>
                         </ul>
                     </li>
                 </ul>
