Added maintaining Field Plan - add, edit, delete

--- a/Hoof/Views/Shared/_Layout.cshtml
+++ b/Hoof/Views/Shared/_Layout.cshtml
@@ -64,6 +64,7 @@
                             <li>@Html.ActionLink("Zatrudnienie", "Index", "EmploymentPlan")</li>
                             <li>@Html.ActionLink("Urządzenia łowieckie", "Index", "HuntEquipmentPlan")</li>
                             <li>@Html.ActionLink("Powierzchnia żeru", "Index", "TrunkFoodPlan")</li>
+                            <li>@Html.ActionLink("Powierzchnia łąk", "Index", "FieldPlan")</li>
                             <li>@Html.ActionLink("Karma", "Index", "FodderPlan")</li>
                             <li>@Html.ActionLink("Koszty", "Index", "CostPlan")</li>
                             <li>@Html.ActionLink("Pozyskanie zwierzyny", "Index", "GameHuntPlan")</li>
