--- a/Hoof/Views/FieldPlan/Plan.cshtml
+++ b/Hoof/Views/FieldPlan/Plan.cshtml
@@ -1,4 +1,4 @@
-﻿@model Domain.TrunkFoodPlan.ViewModels.TrunkFoodPlanViewModel
+﻿@model Domain.FieldPlan.ViewModels.FieldPlanViewModel
 
 @{
     ViewBag.Title = "Plan";
@@ -7,14 +7,14 @@
 @section Scripts{
 
     @Scripts.Render("~/bundles/jqueryval")
-    <script type="text/javascript" src="~/Scripts/TrunkFoodPlan/TrunkFoodPlan.js"></script>
+    <script type="text/javascript" src="~/Scripts/FieldPlan/FieldPlan.js"></script>
     <script type="text/javascript">
         $(document).ready(function() {
             var config = {
                 MarketingYearId: @Model.MarketingYearId,
-                Controller: "TrunkFoodPlan"
+                Controller: "FieldPlan"
             };
-            var trunkFoodPlan = new TrunkFoodPlan(config);
+            var fieldPlan = new FieldPlan(config);
         });
     </script>
 
@@ -34,7 +34,7 @@
 
 <br />
 
-<h4 style="text-align: center">Plan obszarów stanowiących żer dla zwierząt na pniu na rok gospodarczy @Model.MarketingYear</h4>
+<h4 style="text-align: center">Plan powierzchni łąk śródleśnych i przyleśnych na rok gospodarczy @Model.MarketingYear</h4>
 
 <br />
 
@@ -58,9 +58,9 @@
             <a href="#"> <span class="glyphicon glyphicon-ban-circle"></span> </a>
         </td>
         <td>
-            @Html.DropDownList("Powierzchnia obszarów obsianych lub obsadzonych roślinami stanowiącymi żer dla zwierzyny na pniu", new List<SelectListItem>
+            @Html.DropDownList("Powierzchnia zagospodarowanych przez dzierżawcę albo zarządcę obwodu łowieckiego łąk śródleśnych i przyleśnych", new List<SelectListItem>
             {
-                new SelectListItem {Text = "Powierzchnia obszarów obsianych lub obsadzonych roślinami stanowiącymi żer dla zwierzyny na pniu"}
+                new SelectListItem {Text = "Powierzchnia zagospodarowanych przez dzierżawcę albo zarządcę obwodu łowieckiego łąk śródleśnych i przyleśnych"}
             }, "", new { Name = String.Empty, @class = "form-control", id= "district", style="max-width: none"})
         </td>
         <td>
@@ -70,17 +70,17 @@
             <button class="btn btn-primary" id="addPlan">Dodaj</button>
         </td>
     </tr>
-    @if (Model.TrunkFoodPlanModel != null)
+    @if (Model.FiledPlanModel != null)
     {
         <tr>
             <td style="text-align: center">
                 1
             </td>
             <td>
-                Powierzchnia obszarów obsianych lub obsadzonych roślinami stanowiącymi żer dla zwierzyny na pniu
+                Powierzchnia zagospodarowanych przez dzierżawcę albo zarządcę obwodu łowieckiego łąk śródleśnych i przyleśnych
             </td>
             <td class="canEdit">
-                @Html.DisplayFor(modelItem => Model.TrunkFoodPlanModel.Hectare)
+                @Html.DisplayFor(modelItem => Model.FiledPlanModel.Hectare)
             </td>
             <td style="text-align: center">
                 <button class="btn btn-xs btn-success editPlan">Edytuj</button>
@@ -99,7 +99,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Usuwanie planu powierzchni stanowiącej żer dla zwierząt na pniu</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Usuwanie planu powierzchni łąk śródleśnych i przyleśnych</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
